tests/loops/valid/return_in_while.amu
main() : s32 {
    while (1) {
        return 2;
    }
}