tests/loops/invalid/continue_not_in_loop.amu
s32 main() {
    continue;
}